<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_6dp"
    android:backgroundTint="@color/medium_green"
    app:cardCornerRadius="@dimen/list_item_radius_12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_12dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/off_white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:contentDescription="@string/profile_picture_img_description"
            android:id="@+id/profilePic"
            android:layout_width="@dimen/initials_circle_background_40dp"
            android:layout_height="@dimen/initials_circle_background_40dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_placeholder"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox"
            app:layout_constraintStart_toEndOf="@+id/checkbox"
            app:layout_constraintTop_toTopOf="@+id/checkbox" />

        <TextView
            android:id="@+id/tv_initials"
            android:layout_width="@dimen/initials_circle_background_40dp"
            android:layout_height="@dimen/initials_circle_background_40dp"
            android:background="@drawable/circle_image"
            android:gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/off_white"
            android:textSize="@dimen/name_text_size_list_item_20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox"
            app:layout_constraintStart_toEndOf="@+id/checkbox"
            app:layout_constraintTop_toTopOf="@+id/checkbox"
            tools:text="@string/initials_default_text" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/bagel_fat_one"
            android:gravity="center_vertical"
            android:textColor="@color/off_white"
            android:textSize="@dimen/name_text_size_list_item_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_initials"
            app:layout_constraintTop_toTopOf="@id/tv_initials"
            tools:text="@string/list_item_name_default_text" />

        <TextView
            android:id="@+id/tv_add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/add_friend"
            android:textColor="@color/off_white"
            android:textSize="@dimen/add_friend_text_size_list_item_12sp"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@id/tv_initials"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_accept_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/accept_btn_text"
            android:textColor="@color/off_white"
            android:textSize="@dimen/add_friend_text_size_list_item_12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/tv_initials"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_decline_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/decline_friend"
            android:textColor="@color/decline_red"
            android:textSize="@dimen/add_friend_text_size_list_item_12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/tv_accept_friend"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_cancel_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/cancel"
            android:textColor="@color/decline_red"
            android:textSize="@dimen/add_friend_text_size_list_item_12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/tv_add_friend"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <TextView
            android:id="@+id/tv_delete_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/friends"
            android:textColor="@color/off_white"
            android:textSize="@dimen/add_friend_text_size_list_item_12sp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/tv_initials"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />

        <Button
            android:id="@+id/btn_start_chat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_48dp"
            android:backgroundTint="@color/button_color"
            android:clickable="true"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/open_chat"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>