<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/size_16dp"
    android:paddingTop="@dimen/size_4dp"
    android:paddingEnd="@dimen/size_48dp"
    android:paddingBottom="@dimen/size_4dp">

    <ImageView
        android:id="@+id/imgMessage"
        android:layout_width="@dimen/sent_image_size_200dp"
        android:layout_height="@dimen/sent_image_size_200dp"
        android:contentDescription="@string/received_picture_description"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/message_bubble_received"
        android:maxWidth="@dimen/chat_bubble_max_width_280dp"
        android:paddingStart="@dimen/chat_bubble_padding_start_end_14dp"
        android:paddingTop="@dimen/chat_bubble_padding_top_button_10dp"
        android:paddingEnd="@dimen/chat_bubble_padding_start_end_14dp"
        android:paddingBottom="@dimen/chat_bubble_padding_top_button_10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text_size_16sp"
        tools:text="@string/message_preview_text" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_4dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:textColor="@color/time_stamp_color"
        android:textSize="@dimen/chat_time_text_size_12sp"
        tools:text="@string/time_preview_text" />

</LinearLayout>