<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/margin_24dp"
    android:background="@drawable/popup_background"
    tools:context=".popup.DeleteChatPopupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/margin_12dp">

        <ImageView
            android:id="@+id/btn_close_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button_description"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginEnd="@dimen/margin_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/close_button_24"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_delete_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/bagel_fat_one"
            android:text="@string/confirm_deleting_chat"
            android:textAlignment="center"
            android:textSize="@dimen/popup_text_size_32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_trash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6dp"
            android:contentDescription="@string/delete_button_description"
            android:src="@drawable/outline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_delete_chat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>