<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@color/medium_green"
    android:padding="@dimen/margin_16dp"
    android:layout_marginBottom="@dimen/margin_6dp">

    <!-- Rund profilbild med initialer – coolare version -->
    <TextView
        android:id="@+id/tvProfileInitials"
        android:layout_width="@dimen/initials_circle_background_40dp"
        android:layout_height="@dimen/initials_circle_background_40dp"
        android:background="@drawable/circle_image"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        tools:text="@string/initials_default_text"
        android:textAllCaps="true"
        android:textColor="@color/off_white"
        android:textSize="@dimen/name_text_size_list_item_20sp"
        android:textStyle="bold" />

    <!-- Namn och senaste meddelande -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvChatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bagel_fat_one"
            android:textColor="@color/white"
            android:textSize="@dimen/name_text_size_list_item_20sp"
            android:textStyle="bold"
            tools:text="@string/default_name" />

        <TextView
            android:id="@+id/tvLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_last_message"
            android:textColor="@color/off_white"
            android:textSize="@dimen/last_chat_text_size_recent_list_item_14sp" />
    </LinearLayout>

    <!-- Tidstämpel -->
    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/default_time_13_37"
        android:textColor="@color/off_white"
        android:textSize="@dimen/chat_time_text_size_12sp" />

</LinearLayout>