<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_green"
    tools:context=".ui.WelcomeActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_and_edit_text_color"
        android:padding="@dimen/margin_12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/front_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bagel_fat_one"
                android:text="@string/welcome_header_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/header_text_size_48sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_email"
        style="?attr/textInputFilledStyle"
        android:layout_width="@dimen/edit_text_width_220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_128dp"
        android:hint="@string/hint_text_email"
        android:textColorHint="@color/hint_text_color"
        app:boxStrokeColor="@color/hint_text_color"
        app:cursorColor="@color/off_white"
        app:errorTextColor="@color/white"
        app:hintTextColor="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/header_and_edit_text_color"
            android:fontFamily="@font/bagel_fat_one"
            android:inputType="textEmailAddress"
            android:textColor="@color/off_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_password"
        style="?attr/textInputFilledStyle"
        android:layout_width="@dimen/edit_text_width_220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:hint="@string/hint_text_password"
        android:textColorHint="@color/hint_text_color"
        app:boxStrokeColor="@color/hint_text_color"
        app:cursorColor="@color/off_white"
        app:errorTextColor="@color/white"
        app:hintTextColor="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/header_and_edit_text_color"
            android:fontFamily="@font/bagel_fat_one"
            android:inputType="textPassword"
            android:textColor="@color/off_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password">

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/bagel_fat_one"
            android:text="@string/log_in_button_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/bagel_fat_one"
            android:text="@string/register_button_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_log_in" />
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/bagel_fat_one"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bagel_fat_one"
            android:text="@string/app_nickname"
            android:textColor="@color/hint_text_color"
            android:textSize="@dimen/app_name_text_size_36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quantico_bold"
            android:text="@string/developer_text"
            android:textColor="@color/hint_text_color"
            android:textSize="@dimen/developer_text_size"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>